# sesamo

./: .env.test  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  sesamo.sh
.github/workflows/: build-test.yml
assets/: body_example.txt
src/: aws_ses.rs  config.rs  main.rs  test.rs
src/web/: email.rs  health_check.rs  mod.rs
