[package]
name = "rust-template"
version = "0.1.0"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["network-programming"]
description = ""
homepage = "https://github.com/veeso-dev/rust-template"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso-dev/rust-template"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-template"
path = "src/main.rs"

[dependencies]
anyhow = "^1"
envy = "^0.4"
lazy_static = "^1.4"
serde = { version = "^1.0.0", features = ["derive"] }
thiserror = "^1.0"

#actix
actix-multipart = "^0.6"
actix-web = "^4"

#async stuff
reqwest = { version = "^0.11", features = ["rustls-tls"] }
serde_json = "^1.0.0"
serde_with = "^3"
tokio = { version = "^1", features = ["io-std", "net", "fs"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dev-dependencies]
env_logger = "^0.10"
pretty_assertions = "^1.0.0"

[features]
with-containers = []
