[package]
name = "sesamo"
version = "0.1.0"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["network-programming"]
description = ""
homepage = "https://github.com/veeso-dev/sesamo"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso-dev/sesamo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sesamo"
path = "src/main.rs"

[dependencies]
aws-config = "0.56"
aws-sdk-sesv2 = "0.31"
actix-web = "^4"
anyhow = "^1"
base64 = "^0.21"
envy = "^0.4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dev-dependencies]
actix-rt = "^2"
env_logger = "^0.10"
pretty_assertions = "^1"
